include_directories(${XACC_INCLUDE_DIRS})
add_xacc_test(LocalIBMAccelerator)
target_link_libraries(LocalIBMAcceleratorTester xacc-ibm-accelerator)
#add_xacc_test(IBMIRTransformation)
#target_link_libraries(IBMIRTransformationTester xacc-ibm-accelerator xacc-quantum-gate)
include_directories(${CMAKE_SOURCE_DIR}/compiler)
add_xacc_test(OQASMCompiler)
target_link_libraries(OQASMCompilerTester xacc-ibm-oqasmcompiler)
add_xacc_test(OpenQasmVisitor)
add_xacc_test(OpenPulseVisitor)
add_xacc_test(IBMAccelerator)
target_link_libraries(IBMAcceleratorTester xacc-ibm-accelerator)